head 관련 정보 수정

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-	<meta charset='utf-8'>
-	<meta name='viewport' content='width=device-width,initial-scale=1'>
-
+	<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+    <meta name="title" content="SNS Glorify Choir">
+    <meta name="description" content="온누리교회 청년부 SNS 공동체 글로리파이팀에서 여러분을 환영합니다.">
+    <meta name="keywords" content="onnuri, sns, 온누리교회, 온누리, 특순콰이어, 콰이어, 성가대, 4중창">
+    <meta name="author" content="Seongsoo Lim">
+    <meta property="og:title" content="SNS Glorify Choir"/>
+    <meta property="og:description" content="온누리교회 청년부 SNS 공동체 글로리파이팀에서 여러분을 환영합니다."/>
+    <meta property="og:type" content="article"/>
+    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/sns-glorify.appspot.com/o/glory-2019-2.jpeg?alt=media&token=6a9a0860-2fb4-4507-9db8-397cd6d2b143">    
+    <title>SNS Glorify Choir</title>
 	<title>Svelte app</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
